@@ -2148,34 +2148,15 @@ operator|.
 name|getLocalizedMessage
 argument_list|()
 decl_stmt|;
-if|if
-condition|(
 name|LOG
 operator|.
-name|isDebugEnabled
-argument_list|()
-condition|)
-block|{
-name|LOG
-operator|.
-name|debug
+name|fatal
 argument_list|(
 name|msg
 argument_list|,
 name|e
 argument_list|)
 expr_stmt|;
-block|}
-else|else
-block|{
-name|LOG
-operator|.
-name|fatal
-argument_list|(
-name|msg
-argument_list|)
-expr_stmt|;
-block|}
 return|return
 literal|false
 return|;
