@@ -2581,6 +2581,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-9493. Test o.a.h.hdfs.server.namenode.TestMetaSave fails in trunk.
     (Tony Wu via lei)
 
+    HDFS-9639. Inconsistent Logging in BootstrapStandby. (Xiaobing Zhou via
+    Arpit Agarwal)
+
 Release 2.7.3 - UNRELEASED
 
   INCOMPATIBLE CHANGES
